examples/test/testpolicy2576.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2576
  namespace: namespace194
spec:
  podSelector:
    matchLabels:
      key20: value1
      key14: value2
      key38: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value10
      podSelector:
        matchLabels:
          key28: value44
          key30: value35
          key13: value48
